--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.renci.hearsay.plugin</groupId>
   <artifactId>ncbi</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1</version>
   <packaging>pom</packaging>
   <properties>
     <hearsay.version>0.0.41</hearsay.version>
@@ -30,7 +30,7 @@
     <url>https://github.com/jdr0887/Hearsay-NCBI-Plugin</url>
     <developerConnection>scm:git:git@github.com:jdr0887/Hearsay-NCBI-Plugin.git</developerConnection>
     <connection>scm:git:git@github.com:jdr0887/Hearsay-NCBI-Plugin.git</connection>
-    <tag>HEAD</tag>
+    <tag>ncbi-0.0.1</tag>
   </scm>
   <dependencyManagement>
     <dependencies>
