--- a/ncbi-commands/pom.xml
+++ b/ncbi-commands/pom.xml
@@ -2,13 +2,13 @@
   <parent>
     <groupId>org.renci.hearsay.plugin</groupId>
     <artifactId>ncbi</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
   </parent>
   <name>Hearsay :: Plugin :: NCBI :: Commands</name>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.renci.hearsay.plugin.ncbi</groupId>
   <artifactId>ncbi-commands</artifactId>
-  <version>0.0.1</version>
+  <version>0.0.2-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <dependencies>
     <dependency>
