--- a/ncbi-features/pom.xml
+++ b/ncbi-features/pom.xml
@@ -2,13 +2,13 @@
   <parent>
     <groupId>org.renci.hearsay.plugin</groupId>
     <artifactId>ncbi</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
   </parent>
   <name>Hearsay :: Plugin :: NCBI :: Features</name>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.renci.hearsay.plugin.ncbi</groupId>
   <artifactId>ncbi-features</artifactId>
-  <version>0.0.1</version>
+  <version>0.0.2-SNAPSHOT</version>
   <packaging>pom</packaging>
   <build>
     <plugins>
