--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <groupId>org.renci.hearsay</groupId>
     <artifactId>parent</artifactId>
-    <version>0.0.17</version>
+    <version>0.0.20-SNAPSHOT</version>
   </parent>
   <name>Hearsay :: Plugin :: NCBI</name>
   <modelVersion>4.0.0</modelVersion>
@@ -106,28 +106,30 @@
       	<version>${karaf.version}</version>
       </dependency>
       <dependency>
-      	<groupId>org.apache.geronimo.specs</groupId>
-      	<artifactId>geronimo-jta_1.1_spec</artifactId>
-      	<version>1.1.1</version>
-      </dependency>
-      <dependency>
-      	<groupId>org.apache.geronimo.specs</groupId>
-      	<artifactId>geronimo-jpa_2.0_spec</artifactId>
-      	<version>1.1</version>
-      </dependency>
-      <dependency>
       	<groupId>org.osgi</groupId>
       	<artifactId>org.osgi.compendium</artifactId>
-      	<version>4.3.1</version>
+      	<version>5.0.0</version>
       </dependency>
       <dependency>
       	<groupId>org.osgi</groupId>
       	<artifactId>org.osgi.core</artifactId>
-      	<version>4.3.1</version>
+      	<version>5.0.0</version>
       	<scope>provided</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
+  <build>
+    <plugins>
+      <plugin>
+	<groupId>org.apache.maven.plugins</groupId>
+	<artifactId>maven-compiler-plugin</artifactId>
+	<configuration>
+	  <source>1.8</source>
+	  <target>1.8</target>
+	</configuration>
+      </plugin>      
+    </plugins>
+  </build>    
   <modules>
     <module>ncbi-commands</module>
     <module>ncbi-features</module>
