--- a/ncbi-commands/pom.xml
+++ b/ncbi-commands/pom.xml
@@ -13,6 +13,11 @@
   <packaging>bundle</packaging>
   <dependencies>
     <dependency>
+      <groupId>org.renci.hearsay</groupId>
+      <artifactId>hearsay-commands</artifactId>
+      <scope>provided</scope>      
+    </dependency>        
+    <dependency>
       <groupId>org.renci.gene2accession</groupId>
       <artifactId>gene2accession-parser</artifactId>
     </dependency>
