--- a/pom.xml
+++ b/pom.xml
@@ -138,7 +138,42 @@
 	  <source>1.8</source>
 	  <target>1.8</target>
 	</configuration>
-      </plugin>      
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-site-plugin</artifactId>
+        <version>${maven.site.plugin.version}</version>
+        <configuration>
+	  <reportPlugins>
+	    <plugin>
+	      <groupId>org.apache.maven.plugins</groupId>
+	      <artifactId>maven-project-info-reports-plugin</artifactId>
+	      <version>2.8.1</version>
+	      <configuration>
+		<dependencyDetailsEnabled>true</dependencyDetailsEnabled>
+		<dependencyLocationsEnabled>true</dependencyLocationsEnabled>
+	      </configuration>
+	      <reports>
+	      </reports>
+	    </plugin>
+	    <plugin>
+	      <groupId>org.apache.maven.plugins</groupId>
+	      <artifactId>maven-javadoc-plugin</artifactId>
+	      <version>${maven.javadoc.plugin.version}</version>
+	    </plugin>
+	    <plugin>
+	      <groupId>org.apache.maven.plugins</groupId>
+	      <artifactId>maven-surefire-report-plugin</artifactId>
+	      <version>${maven.surefire.report.plugin.version}</version>
+	    </plugin>
+	    <plugin>
+	      <groupId>org.apache.maven.plugins</groupId>
+	      <artifactId>maven-changelog-plugin</artifactId>
+	      <version>${maven.changelog.plugin.version}</version>
+	    </plugin>	    
+	  </reportPlugins>
+        </configuration>
+      </plugin>            
     </plugins>
   </build>    
   <modules>
